--- a/skyrim64_test/skyrim64_ckt.vcxproj
+++ b/skyrim64_test/skyrim64_ckt.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="src\dllmain.cpp" />
     <ClCompile Include="src\dump.cpp" />
     <ClCompile Include="src\patches\CKIT\Editor.cpp" />
+    <ClCompile Include="src\patches\CKIT\EditorUI.cpp" />
     <ClCompile Include="src\patches\CKIT\TESForm_CK.cpp" />
     <ClCompile Include="src\patches\patches_ckit.cpp" />
     <ClCompile Include="src\patches\experimental.cpp" />
@@ -38,6 +39,7 @@
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\dump.h" />
     <ClInclude Include="src\patches\CKIT\Editor.h" />
+    <ClInclude Include="src\patches\CKIT\EditorUI.h" />
     <ClInclude Include="src\patches\CKIT\NavMesh.h" />
     <ClInclude Include="src\patches\CKIT\TESForm_CK.h" />
     <ClInclude Include="src\patches\INIReader.h" />
