Update INI settings file

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -17,6 +17,7 @@ AllowMasterESP=true                 ; Allow ESP files to act as master files whi
 SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping topic info validation
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
 DisableAutoFacegen=true             ; Prevent facegen data from being created on ESP save
+UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
 
 ;
 ; SKYRIM SETTINGS
