CreationKit: Force render window to be constant 60fps + add current ini settings

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -18,6 +18,8 @@ SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping t
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
 DisableAutoFacegen=true             ; Prevent facegen data from being created on ESP save
 UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
+TintMaskResolution=512              ; Sets resolution when exporting facegen textures
+RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
 
 ;
 ; SKYRIM SETTINGS
