--- a/skyrim64_test/skyrim64_ckt.vcxproj
+++ b/skyrim64_test/skyrim64_ckt.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="src\patches\experimental.cpp" />
     <ClCompile Include="src\patches\fileio.cpp" />
     <ClCompile Include="src\patches\steam.cpp" />
+    <ClCompile Include="src\patches\TES\bhkThreadMemorySource.cpp" />
     <ClCompile Include="src\patches\TES\MemoryManager.cpp" />
     <ClCompile Include="src\patches\TES\NiMain\NiRTTI.cpp" />
     <ClCompile Include="src\patches\threading.cpp" />
@@ -43,6 +44,7 @@
     <ClInclude Include="src\patches\CKIT\NavMesh.h" />
     <ClInclude Include="src\patches\CKIT\TESForm_CK.h" />
     <ClInclude Include="src\patches\INIReader.h" />
+    <ClInclude Include="src\patches\TES\bhkThreadMemorySource.h" />
     <ClInclude Include="src\patches\TES\MemoryManager.h" />
     <ClInclude Include="src\patches\TES\NiMain\NiRTTI.h" />
     <ClInclude Include="src\typeinfo\hk_rtti.h" />
