--- a/skyrim64_test/skyrim64_ckt.vcxproj.filters
+++ b/skyrim64_test/skyrim64_ckt.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="src\patches\CKIT\EditorUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\patches\TES\bhkThreadMemorySource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -107,6 +110,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\patches\CKIT\EditorUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\patches\TES\bhkThreadMemorySource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
