--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -19,10 +19,14 @@ AllowSaveESM=false                  ; Allow saving master files directly
 AllowMasterESP=true                 ; Allow ESP files to act as master files while saving
 SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping topic info validation
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
-DisableAutoFacegen=true             ; Prevent facegen data from being created on ESP save
 UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
-TintMaskResolution=512              ; Sets resolution when exporting facegen textures
 RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
+
+[CreationKit_FaceGen]
+DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
+DisableExportDDS=false              ; Prevent tint export as DDS
+DisableExportTGA=false              ; Prevent tint export as TGA
+TintMaskResolution=512              ; Sets NxN resolution when exporting textures
 
 ;
 ; SKYRIM SETTINGS
