CreationKit: Add font/size INI options for log window

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -27,6 +27,13 @@ DisableExportDDS=false              ; Prevent tint export as DDS
 DisableExportTGA=false              ; Prevent tint export as TGA
 TintMaskResolution=512              ; Sets NxN resolution when exporting textures
 
+[CreationKit_Log]
+Width=1024                          ; Initial log window width
+Height=480                          ; Initial log window height
+Font=Consolas                       ; Any installed system font
+FontSize=10                         ; Size in points
+FontWeight=400                      ; Light (300), Regular (400), Medium (500), Bold (700)
+
 ;
 ; SKYRIM SETTINGS
 ;
