CreationKit: Add code/option to defer item insertions with dropdown menus containing TESForm lists in order to optimize dialog loading

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -10,6 +10,7 @@ CommitId=UNSET
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 ExperimentalOptimization=true       ; [Experimental] Code optimizations
+DeferredDialogLoad=true             ; [Experimental] Cache dropdown menus with TESForm item insertions to speed up dialogs
 
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 MemoryPatch=true                    ; Replace Bethesda's memory allocator with TBBMalloc
