--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -67,7 +67,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)Dependencies\jemalloc\include;$(SolutionDir)Dependencies\jemalloc\include\msvc_compat;$(SolutionDir)Dependencies\zydis\msvc\zydis;$(SolutionDir)Dependencies\zydis\include;$(SolutionDir)Dependencies\tbb\include;$(SolutionDir)Dependencies;E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(OutDir);E:\Program Files %28x86%29\IntelSWTools\VTune Amplifier 2019\lib64;$(LibraryPath)</LibraryPath>
-    <TargetName>d3dx9_42</TargetName>
+    <TargetName>winhttp</TargetName>
     <IntDir>$(SolutionDir)x64\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='EditAndContinue|x64'">
@@ -138,6 +138,10 @@
   <ItemGroup>
     <ClInclude Include="src\config.h" />
     <ClInclude Include="src\INIReader.h" />
+    <ClInclude Include="src\patches\CKIT\Editor.h" />
+    <ClInclude Include="src\patches\CKIT\EditorUI.h" />
+    <ClInclude Include="src\patches\CKIT\NavMesh.h" />
+    <ClInclude Include="src\patches\CKIT\TESForm_CK.h" />
     <ClInclude Include="src\patches\INIReader.h" />
     <ClInclude Include="src\patches\rendering\d3d11_proxy.h" />
     <ClInclude Include="src\patches\rendering\GpuCircularBuffer.h" />
@@ -216,7 +220,6 @@
     <ClInclude Include="src\patches\TES\Console.h" />
     <ClInclude Include="src\patches\TES\TESForm_CK.h" />
     <ClInclude Include="src\profiler_internal.h" />
-    <ClInclude Include="src\d3dconv.h" />
     <ClInclude Include="src\patches\dinput8.h" />
     <ClInclude Include="src\dump.h" />
     <ClInclude Include="src\profiler.h" />
@@ -238,17 +241,19 @@
     <ClInclude Include="src\xutil.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\winhttp_exports.cpp" />
     <ClCompile Include="src\common.cpp" />
-    <ClCompile Include="src\d3d9.cpp" />
     <ClCompile Include="src\patches\achievements.cpp" />
+    <ClCompile Include="src\patches\CKIT\Editor.cpp" />
+    <ClCompile Include="src\patches\CKIT\EditorUI.cpp" />
+    <ClCompile Include="src\patches\CKIT\TESForm_CK.cpp" />
     <ClCompile Include="src\patches\fileio.cpp" />
+    <ClCompile Include="src\patches\patches_ckit.cpp" />
     <ClCompile Include="src\patches\patches_tes.cpp" />
     <ClCompile Include="src\patches\rendering\codegen.cpp" />
     <ClCompile Include="src\patches\rendering\d3d11.cpp" />
-    <ClCompile Include="src\d3dx9_debug.cpp" />
     <ClCompile Include="src\patches\dinput8.cpp" />
     <ClCompile Include="src\dllmain.cpp" />
-    <ClCompile Include="src\d3dx9_release.cpp" />
     <ClCompile Include="src\dump.cpp" />
     <ClCompile Include="src\patches\experimental.cpp" />
     <ClCompile Include="src\patches\logging.cpp" />
