CreationKit: Add option for crash dump generation

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -12,6 +12,7 @@ ThreadingPatch=true                 ; [Experimental] Thread priority changes
 ExperimentalOptimization=true       ; [Experimental] Code optimizations
 DeferredDialogLoad=true             ; [Experimental] Cache dropdown menus with TESForm item insertions to speed up dialogs
 
+GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 MemoryPatch=true                    ; Replace Bethesda's memory allocator with TBBMalloc
 NavMeshPseudoDelete=false           ; Remove a triangle from a navmesh without deleting it
