CreationKit: Add option to disable facegen NIF export

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -27,6 +27,7 @@ RenderWindow60FPS=false             ; Force render window to always draw at 60 f
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
 DisableExportDDS=false              ; Prevent tint export as DDS
 DisableExportTGA=false              ; Prevent tint export as TGA
+DisableExportNIF=false              ; Prevent facegen geometry export
 TintMaskResolution=512              ; Sets NxN resolution when exporting textures
 
 [CreationKit_Log]
