--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -11,6 +11,7 @@ IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 DeferredDialogLoad=true             ; [Experimental] Cache dropdown menus with TESForm item insertions to speed up dialogs
 RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
+FaceGenBatchSpeedup=false           ; [Experimental] Speed up facegen export when doing NPC batches (Ctrl+F4)
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
