CreationKit: Re-enable fog rendering in the Render Window by forcing post-process effects

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -12,6 +12,7 @@ ThreadingPatch=true                 ; [Experimental] Thread priority changes
 DeferredDialogLoad=true             ; [Experimental] Cache dropdown menus with TESForm item insertions to speed up dialogs
 RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
 FaceGenBatchSpeedup=false           ; [Experimental] Speed up facegen export when doing NPC batches (Ctrl+F4)
+RenderWindowFog=false               ; [Experimental] Re-enable fog in the main render window
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
