CreationKit32/64: Add verbose logging and option for FaceFXWrapper output

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -22,6 +22,7 @@ SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping t
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
 UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
 RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
+FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
 
 [CreationKit_FaceGen]
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
