CreationKit: Add toggle to disable unresponsive window ghosting

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -23,6 +23,7 @@ DisableAssertions=false             ; Remove assertion message popups (not recom
 UI=true                             ; Replaces the warning window with a less intrusive log window. Also adds "Extensions" menu to the menu bar.
 RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
 FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
+DisableWindowGhosting=false         ; Disable "Not Responding" overlay while performing certain tasks
 
 [CreationKit_FaceGen]
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
