CreationKit: Rework AllowSaveESM to properly generate ONAM overrides and allow ESMs to be set as the active file during load

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -16,7 +16,7 @@ GenerateCrashdumps=true             ; Generate a dump in the game folder when th
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
 MemoryPatch=true                    ; Replace Bethesda's memory allocator with TBBMalloc
 NavMeshPseudoDelete=false           ; Remove a triangle from a navmesh without deleting it
-AllowSaveESM=false                  ; Allow saving master files directly
+AllowSaveESM=false                  ; Allow saving master files directly & setting them as the active file in the Data File dialog. This will destroy version control information.
 AllowMasterESP=true                 ; Allow ESP files to act as master files while saving
 SkipTopicInfoValidation=true        ; Speed up initial plugin load by skipping topic info validation
 DisableAssertions=false             ; Remove assertion message popups (not recommended)
