--- a/skyrim64_test/skyrim64_test.vcxproj
+++ b/skyrim64_test/skyrim64_test.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="src\patches\CKIT\Editor.h" />
     <ClInclude Include="src\patches\CKIT\EditorUI.h" />
     <ClInclude Include="src\patches\CKIT\NavMesh.h" />
+    <ClInclude Include="src\patches\CKIT\TESFile_CK.h" />
     <ClInclude Include="src\patches\CKIT\TESForm_CK.h" />
     <ClInclude Include="src\patches\CKIT\TESWater.h" />
     <ClInclude Include="src\patches\INIReader.h" />
@@ -253,6 +254,7 @@
   <ItemGroup>
     <ClCompile Include="src\patches\bnet.cpp" />
     <ClCompile Include="src\patches\CKIT\BSPointerHandle.cpp" />
+    <ClCompile Include="src\patches\CKIT\TESFile_CK.cpp" />
     <ClCompile Include="src\winhttp_exports.cpp" />
     <ClCompile Include="src\common.cpp" />
     <ClCompile Include="src\patches\achievements.cpp" />
