CreationKit: Add experimental option to improve loading times when using a large amount of loose files (>50k)

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -10,6 +10,7 @@ CommitId=UNSET
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
+LooseFileCache=false                ; [Experimental] Cache loose file information during the initial splash screen to improve load times
 RenderWindowFog=false               ; [Experimental] Re-enable fog in the main render window
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
