CreationKit: RenderWindowFog no longer marked as experimental

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -11,7 +11,6 @@ IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
 LooseFileCache=false                ; [Experimental] Cache loose file information during the initial splash screen to improve load times
-RenderWindowFog=false               ; [Experimental] Re-enable fog in the main render window
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
@@ -25,6 +24,7 @@ UI=true                             ; Replaces the warning window with a less in
 RenderWindow60FPS=false             ; Force render window to always draw at 60 frames per second instead of 16
 FaceFXDebugOutput=false             ; Enable verbose logging output when generating LIP files
 DisableWindowGhosting=false         ; Disable "Not Responding" overlay while performing certain tasks
+RenderWindowFog=false               ; Re-enable fog in the main render window
 
 [CreationKit_FaceGen]
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
