--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -39,6 +39,7 @@ Height=480                          ; Initial log window height
 Font=Consolas                       ; Any installed system font
 FontSize=10                         ; Size in points
 FontWeight=400                      ; Light (300), Regular (400), Medium (500), Bold (700)
+OutputFile=none                     ; Print log output to a file (i.e. "log.txt"). May cause UI lag on slow hard drives. To disable, set the value to "none".
 
 ;
 ; SKYRIM SETTINGS
