CreationKit: Tweak default ini settings

--- a/skyrim64_test.ini
+++ b/skyrim64_test.ini
@@ -10,7 +10,7 @@ CommitId=UNSET
 IOPatch=false                       ; [Experimental] File load optimizations
 ThreadingPatch=true                 ; [Experimental] Thread priority changes
 RefrHandleLimitPatch=false          ; [Experimental] Double the limit for reference handles. Fixes "OUT OF HANDLE ARRAY ENTRIES" error.
-LooseFileCache=false                ; [Experimental] Cache loose file information during the initial splash screen to improve load times
+LooseFileCache=true                 ; [Experimental] Cache loose file information during the initial splash screen to improve load times
 
 GenerateCrashdumps=true             ; Generate a dump in the game folder when the CK crashes
 SteamPatch=true                     ; Prevent Steam from saying you're ingame while the CK is open
@@ -29,7 +29,7 @@ RenderWindowFog=false               ; Re-enable fog in the main render window
 [CreationKit_FaceGen]
 DisableAutoFaceGen=true             ; Prevent facegen data from being created on plugin save
 DisableExportDDS=false              ; Prevent tint export as DDS
-DisableExportTGA=false              ; Prevent tint export as TGA
+DisableExportTGA=true               ; Prevent tint export as TGA
 DisableExportNIF=false              ; Prevent facegen geometry export
 TintMaskResolution=512              ; Sets NxN resolution when exporting textures
 
